--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a simple node to do app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "blessed-tawanda",
   "license": "ISC",
